tests/fixtures/invalid/sizeof_const_void.c
int main() {
    return sizeof(const void);
}
